--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </section>
     <section id="logo">
         <div class="box-container">
+            <span id="job-role">{front-end developer}</span>
             <div id="logo-image-container">
                 <img src="./images/profile-edit.png" alt="profile picture" width="250px" height="auto">
             </div>
